Fix buggy work grid card sizes on mobile

--- a/css/pages/home/work.css
+++ b/css/pages/home/work.css
@@ -12,13 +12,4 @@
     display: flex;
     flex-direction: column;
     max-width: 420px;
-    margin-inline: auto;
 }
-
-/*.work-card > h2 {*/
-/*    font-size: var(--fs-h3);*/
-/*}*/
-
-/*.work-card > h3 {*/
-/*    font-size: var(--fs-h4);*/
-/*}*/
